hyperlinks das minhas redes

--- a/caio_nunes.html
+++ b/caio_nunes.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caio Nunes</title>
-<h1>Olá Mundo</h1>
-<p>Esse site tem por objetivo juntar as informações sobre mim, Caio Nunes.</p> 
-<h2>Um pouco sobre mim:</h2>
-<ul>
-    <li>
-        <a href=""></a>
-    </li>
-</ul>   
-</head>
-<body>
-    
-</body>
+     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     
+        <title>Caio Nunes</title>
+        <h1>Olá Mundo</h1>
+        <p>Esse site tem por objetivo juntar as informações sobre mim, Caio Nunes.</p> 
+  
+     </head>
+  <body>
+    h2>Um pouco sobre mim:</h2>
+        <ul>
+           <li>
+              <a href="https://github.com/CaioNunesS">github</a>
+           </li>
+           <li>
+              <a href="https://www.linkedin.com/in/caio-nunes-884138144/">Linkedin</a>
+           </li>
+  </body>
 </html>
