--- a/caio_nunes.html
+++ b/caio_nunes.html
@@ -11,7 +11,7 @@
   
      </head>
   <body>
-    h2>Um pouco sobre mim:</h2>
+    <h2>Um pouco sobre mim:</h2>
         <ul>
            <li>
               <a href="https://github.com/CaioNunesS">github</a>
