--- a/caio_nunes.html
+++ b/caio_nunes.html
@@ -8,19 +8,17 @@
         <title>Caio Nunes</title>
         <img width="200px" src="Imagem-Caio (2).jpeg" alt=""> 
         <h1>Olá Mundo</h1>
-        <p>Esse site tem por objetivo juntar as informações sobre mim, Caio Nunes.</p> 
+        <p>Esse site tem por objetivo juntar informações sobre mim, Caio Nunes.</p> 
   
      </head>
   <body>
-    <h2>Um pouco sobre mim:</h2>
+    <h3>Um pouco sobre mim:</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente natus deleniti quidem necessitatibus iste numquam ipsa inventore ullam consequatur tempore, veritatis iure quia, libero ratione obcaecati tempora veniam aliquid magnam quae. Maiores nam totam voluptate inventore atque ipsum, at dignissimos?
     </p>
         <nav>
-            <li>
-                <a href="https://www.linkedin.com/in/caio-nunes-884138144/">Linkedin</a>
+            <li><a href="https://www.linkedin.com/in/caio-nunes-884138144/">Linkedin</a>
             </li>
-            <li>
-                <a href="https://github.com/CaioNunesS">github</a>
+            <li><a href="https://github.com/CaioNunesS">github</a>
             </li>
         </nav>
    </body>
