--- a/site_Caio/index.html
+++ b/site_Caio/index.html
@@ -4,17 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     
         <title>Caio Nunes</title>
-        <img width="200px" src="Imagem-Caio (2).jpeg" alt=""> 
-        <h1>Olá Mundo</h1>
-        <p>Esse site tem por objetivo juntar informações sobre mim, Caio Nunes.</p> 
-  
      </head>
-  <body>
-    <h3>Um pouco sobre mim:</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente natus deleniti quidem necessitatibus iste numquam ipsa inventore ullam consequatur tempore, veritatis iure quia, libero ratione obcaecati tempora veniam aliquid magnam quae. Maiores nam totam voluptate inventore atque ipsum, at dignissimos?
-    </p>
+       
+     <body>
+         <h1 class=titulo>Olá Mundo</h1>
+        <p class="paragrafo-1">Esse site tem por objetivo juntar informações sobre mim, Caio Nunes.</p> 
+        <h2 class="subtitulo-1">Um pouco sobre mim:</h2>
+        <p class="paragrafo-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente natus deleniti quidem necessitatibus iste numquam ipsa inventore ullam consequatur tempore, veritatis iure quia, libero ratione obcaecati tempora veniam aliquid magnam quae. Maiores nam totam voluptate inventore atque ipsum, at dignissimos?
+        </p>
         <nav>
             <li><a href="https://www.linkedin.com/in/caio-nunes-884138144/">Linkedin</a>
             </li>
